@@ -1,5 +1,3 @@
-* Sir Jacob gets stopped by opened doors when using special
-* Ryder's special can teleport to unwalkable spaces (off map)
 * Characters should be able to move through each other as long as they have action points to move afterwards.
 * Quit button doesn't do anything (quit app)
 * Closing the electron window keeps the process alive still
